# mili-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  pom.xml  sea-orm-cli.toml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250727_191031_create_user.rs  m20250727_191622_create_camera.rs  m20250727_191634_create_evidences.rs  m20250727_191643_create_evidence_photo.rs  m20250727_191709_create_historic.rs  m20250727_191715_create_oc_user.rs  m20250727_191730_create_status_occurrences.rs  main.rs
src/: main.rs
src/auth/: jwt.rs  middleware.rs
src/config/: app_state.rs  database.rs
src/database/entities/: app_occurrence_photos.rs  app_occurrence_statuses.rs  app_occurrences.rs  app_settings.rs  camera.rs  camera_evidences.rs  evidence_photo.rs  evidences.rs  historic.rs  mod.rs  oc_user.rs  occurrence_history.rs  occurrences.rs  status_oc_user.rs  status_occurrences.rs  user.rs  website_occurrence_statuses.rs  website_occurrences.rs
src/main/java/br/com/mili/backend/config/: BeansConfig.java  SecurityConfig.java
src/main/resources/: application.yml
src/main/resources/db/migration/: V1__teste_conexao.sql  V2__criacao_tabelas.sql  V3__adiconando_user_padrao.sql  V4__adicao_configuracao.sql
src/modules/: mod.rs
src/modules/cameras/: handler.rs
src/modules/evidence/: dto.rs  handler.rs  routes.rs
src/modules/evidences/: handler.rs  mod.rs
src/modules/keycloak/: client.rs  config.rs  dto.rs  mod.rs
src/modules/occurrences/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/modules/settings/: dto.rs  handler.rs  routes.rs  service.rs
src/modules/status/: handler.rs
src/modules/users/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
(+43 files in other folders)
